add new partners pictures and add memebers for the team of hammam sousse

--- a/views/index.jade
+++ b/views/index.jade
@@ -207,7 +207,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/img/item-2.jpg",height="250", width="360",alt="img01")
+              img(src="/img/hammamSousse2015/5.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/youthcouncil2015#hammamSousse')
                 h2= t('team.textCenter2')
