--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -345,39 +345,39 @@ block content
             .pfblock-subtitle= t('team.hsDescription')
             .media
               .media-left
-                img.media-object(src='img/coordinators/HanenJrad.jpg', alt='47', height="160", width="180")
+                img.media-object(src='img/coordinators/HanenJrad.jpg', alt='48', height="160", width="180")
               .media-body
                 h4.media-heading= t('team.coordinatorHS')
                 span= t('team.coordinatorHSDescription')
             .media
               .media-left
-                img.media-object(src='img/coordinators/hammamSousse/hibaKalbousi.jpg', alt='47', height="160", width="180")
+                img.media-object(src='img/hammamSousse2015/hibaKalbousi.jpg', alt='49', height="160", width="180")
               .media-body
-                h4.media-heading= t('team.coordinatorHS')
+                h4.media-heading= t('team.hsMember2')
                 span= t('team.coordinatorHSDescription')
             .media
               .media-left
-                img.media-object(src='img/coordinators/hammamSousse/hichemHosny.jpg', alt='47', height="160", width="180")
+                img.media-object(src='img/chammamSousse2015/hichemHosny.jpg', alt='50', height="160", width="180")
               .media-body
-                h4.media-heading= t('team.coordinatorHS')
+                h4.media-heading= t('team.hsMember4')
                 span= t('team.coordinatorHSDescription')
             .media
               .media-left
-                img.media-object(src='img/coordinators/hammamSousse/meriamBenMustapha.jpg', alt='47', height="160", width="180")
+                img.media-object(src='img/hammamSousse2015/meriamBenMustapha.jpg', alt='51', height="160", width="180")
               .media-body
-                h4.media-heading= t('team.coordinatorHS')
+                h4.media-heading= t('team.hsMember1')
                 span= t('team.coordinatorHSDescription')
             .media
               .media-left
-                img.media-object(src='img/coordinators/hammamSousse/naiimbsili.jpg', alt='47', height="160", width="180")
+                img.media-object(src='img/hammamSousse2015/naiimbsili.jpg', alt='52', height="160", width="180")
               .media-body
-                h4.media-heading= t('team.coordinatorHS')
+                h4.media-heading= t('team.hsMember3')
                 span= t('team.coordinatorHSDescription')
             .media
               .media-left
-                img.media-object(src='img/coordinators/hammamSousse/nidhalChemkhi.jpg', alt='47', height="160", width="180")
+                img.media-object(src='img/hammamSousse2015/nidhalChemkhi.jpg', alt='53', height="160", width="180")
               .media-body
-                h4.media-heading= t('team.coordinatorHS')
+                h4.media-heading= t('team.hsMember5')
                 span= t('team.coordinatorHSDescription')
 
   // Kalaa Kebira team: description
