--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -304,19 +304,61 @@ block content
     // .contaier
   // miniProjectKK 2013 ends: description + gallery
 
+  // ==========================================================================
+  // Ksibet Mediouni
+  // ==========================================================================
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('youthcouncil2015.km')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.projectKM')
+    // .contaier
+  // miniProjectKK 2013 ends: description + gallery
+
+  // ==========================================================================
+  // M'Saken
+  // ==========================================================================
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('youthcouncil2015.msaken')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.projectMsaken')
+    // .contaier
+  // miniProjectM 2013 ends: description + gallery       
+
+  // ==========================================================================
+  // Monastir
+  // ==========================================================================
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('youthcouncil2015.monastir')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.projectMonastir')
+    // .contaier
+  // miniProjectM 2013 ends: description + gallery    
+
   //- // ==========================================================================
-  //- // Monastir
+  //- // Sousse
   //- // ==========================================================================
   //- section#projects.pfblock
   //-   .container
   //-     .row
   //-       .col-sm-6.col-sm-offset-3
   //-         .pfblock-header.wow.fadeInUp
-  //-           h2.pfblock-title= t('team.textCenter5')
+  //-           h2.pfblock-title= t('youthcouncil2015.monastir')
   //-           .pfblock-line
-  //-           .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
-  //-   // .contaier
-  //- // miniProjectM 2013 ends: description + gallery            
+  //-           .pfblock-subtitle= t('youthcouncil2015.projectMonastir')
+    // .contaier
+  // miniProjectM 2013 ends: description + gallery 
 
   // Erriadh team: description
   section#erriadh.pfblock
