--- a/views/index.jade
+++ b/views/index.jade
@@ -228,7 +228,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/img/item-5.jpg", height="250", width="360",alt="img01")
+              img(src="/img/Monastir2015/1.jpg", height="250", width="360",alt="img01")
               figcaption
                 a(href='/youthcouncil2015#monastir')
                 h2= t('team.textCenter5')
