Add the polish partners

--- a/views/index.jade
+++ b/views/index.jade
@@ -289,6 +289,12 @@ block content
             blockquote
               p= t('partners.blockQuote3')
               footer= t('partners.footer3') 
+          .cbp-qtcontent
+            img(src="/img/partner1.jpg", height="250", width="1080", alt="partner1")
+          .cbp-qtcontent
+            img(src="/img/partner2.jpg", height="250", width="1080", alt="partner2")
+          .cbp-qtcontent
+            img(src="/img/partner3.jpg", height="250", width="1080", alt="partner3")
       // .row
     // .row
   // Partners end
