--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -719,6 +719,20 @@ block content
   // training & workshop 2015 ends: description + gallery
 
   // ==========================================================================
+  // Mini projects
+  // ==========================================================================
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('youthcouncil2015.miniproject')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.miniprojectDescrip')
+    // .contaier
+  // erriadh 2015 ends: description + gallery
+
+  // ==========================================================================
   // ERRIADH
   // ==========================================================================
   section#projects.pfblock
@@ -730,7 +744,7 @@ block content
             .pfblock-line
             .pfblock-subtitle= t('youthcouncil2015.projectErriadh')
     // .contaier
-  // miniProjectHS 2013 ends: description + gallery
+  // erriadh 2015 ends: description + gallery
 
   // ==========================================================================
   // Hammam Sousse
