Add youth council msaken projects

--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -822,7 +822,154 @@ block content
             .pfblock-line
             .pfblock-subtitle= t('youthcouncil2015.projectMsaken')
     // .contaier
-  // miniProjectM 2013 ends: description + gallery       
+    // The Gallery as lightbox dialog, should be a child element of the document body
+    .container
+      #linksminiProjectMsaken
+        a(href="img/msaken2015/miniProject/1.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/1.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/2.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/2.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/3.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/3.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/4.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/4.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/5.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/5.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/6.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/6.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/7.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/7.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/miniProject/8.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/miniProject/8.jpg", alt="1" , height="100", width="120")
+  // miniProjectM 2013 ends: description + gallery
+
+  // Event Atini Aidi
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.atiniAidi')
+    // .contaier
+    // The Gallery as lightbox dialog, should be a child element of the document body
+    .container
+      #linksminiProjectMsaken
+        a(href="img/msaken2015/atiniAidi/1.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/atiniAidi/1.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/atiniAidi/2.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/atiniAidi/2.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/atiniAidi/3.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/atiniAidi/3.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/atiniAidi/4.jpg", title="M'Saken mini project 2015", data-gallery="")
+          img(src="img/msaken2015/atiniAidi/4.jpg", alt="1" , height="100", width="120")
+  // end event atini aidi
+
+  // Event fitness creed
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.fitnessCreed')
+    // .contaier
+    // The Gallery as lightbox dialog, should be a child element of the document body
+    .container
+      #linksminiProjectMsaken
+        a(href="img/msaken2015/fitnessCreed/1.jpg", title="M'Saken Event fitness creed", data-gallery="")
+          img(src="img/msaken2015/fitnessCreed/1.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/fitnessCreed/2.jpg", title="M'Saken Event fitness creed", data-gallery="")
+          img(src="img/msaken2015/fitnessCreed/2.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/fitnessCreed/3.jpg", title="M'Saken Event fitness creed", data-gallery="")
+          img(src="img/msaken2015/fitnessCreed/3.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/fitnessCreed/4.jpg", title="M'Saken Event fitness creed", data-gallery="")
+          img(src="img/msaken2015/fitnessCreed/4.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/fitnessCreed/5.jpg", title="M'Saken Event fitness creed", data-gallery="")
+          img(src="img/msaken2015/fitnessCreed/5.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/fitnessCreed/6.jpg", title="M'Saken Event fitness creed", data-gallery="")
+          img(src="img/msaken2015/fitnessCreed/6.jpg", alt="1" , height="100", width="120")
+  // end event fitness creed
+
+  // Event forum d'orientation
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.forumOrientation')
+    // .contaier
+    // The Gallery as lightbox dialog, should be a child element of the document body
+    .container
+      #linksminiProjectMsaken
+        a(href="img/msaken2015/forumOrientation/1.jpg", title="M'Saken forum", data-gallery="")
+          img(src="img/msaken2015/forumOrientation/1.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/forumOrientation/2.jpg", title="M'Saken forum", data-gallery="")
+          img(src="img/msaken2015/forumOrientation/2.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/forumOrientation/3.jpg", title="M'Saken forum", data-gallery="")
+          img(src="img/msaken2015/forumOrientation/3.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/forumOrientation/4.jpg", title="M'Saken forum", data-gallery="")
+          img(src="img/msaken2015/forumOrientation/4.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/forumOrientation/5.jpg", title="M'Saken forum", data-gallery="")
+          img(src="img/msaken2015/forumOrientation/5.jpg", alt="1" , height="100", width="120")
+  // end event forum d'orientation
+
+  // Event dream
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.dream')
+    // .contaier
+    // The Gallery as lightbox dialog, should be a child element of the document body
+    .container
+      #linksminiProjectMsaken
+        a(href="img/msaken2015/revez/1.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/1.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/2.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/2.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/3.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/3.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/4.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/4.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/4.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/4.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/4.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/4.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/5.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/5.jpg", alt="1" , height="100", width="120")
+
+        a(href="img/msaken2015/revez/6.jpg", title="M'Saken dreams", data-gallery="")
+          img(src="img/msaken2015/revez/6.jpg", alt="1" , height="100", width="120")
+  // end event dream
 
   // ==========================================================================
   // Monastir
@@ -1002,9 +1149,9 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('youthcouncil2013.studyTrip')
+            h2.pfblock-title= t('youthcouncil2015.studyTrip')
             .pfblock-line
-            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
+            //.pfblock-subtitle= t('youthcouncil2015.figCaptionDescription2')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
         #linksstudyTrip2015
@@ -1209,7 +1356,4 @@ block footer
           link = target.src ? target.parentNode : target,
           options = {index: link, event: event},
           links = this.getElementsByTagName('a');
-      blueimp.Gallery(links, options);
-    };
-     
-        
+      blueimp.Gallery
