--- a/public/css/style.css
+++ b/public/css/style.css
@@ -427,6 +427,23 @@ textarea.form-control {
 	padding: 0;
 }
 
+/* ---------------------------------------------- /*
+ * Youth council 2015
+/* ---------------------------------------------- */
+
+#homeyouthcouncil2016 {
+	background: url(../img/photogroup2016.jpg);
+	background-color: #222;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	-webkit-background-size: cover;
+	   -moz-background-size: cover;
+		 -o-background-size: cover;
+			background-size: cover;
+	padding: 0;
+}
+
 .iconbox {
 	background: #fff;
 	border-bottom: 1px solid #d4d4d4;
@@ -947,7 +964,7 @@ figure.effect-bubba:hover p {
 
 .cbp-qtrotator .cbp-qtcontent.cbp-qtcurrent,
 .no-js .cbp-qtrotator .cbp-qtcontent {
-	position: relative; 
+	position: relative;
 	z-index: 100;
 	pointer-events: auto;
 	opacity: 1;
@@ -1000,7 +1017,7 @@ figure.effect-bubba:hover p {
 }
 
 /* Example for media query */
-@media screen and (max-width: 30.6em) { 
+@media screen and (max-width: 30.6em) {
 
 	.cbp-qtrotator {
 		font-size: 70%;
@@ -1011,4 +1028,3 @@ figure.effect-bubba:hover p {
 	}
 
 }
-
