--- a/views/index.jade
+++ b/views/index.jade
@@ -44,9 +44,7 @@ block content
                 li
                   a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
                 li
-                  a(href="#youthcouncil2013")= t('nav.youthcouncil2013')             
-            li
-              a(href="#teams")= t('nav.teams') 
+                  a(href="#youthcouncil2013")= t('nav.youthcouncil2013')        
             li
               a(href="#partners")= t('nav.partners') 
             li
@@ -88,7 +86,7 @@ block content
               a.iconbox-title(href='#contact')= t('home.joinUs')
               .iconbox-desc= t('youthcouncil2016.iconboxDesc1') 
       .row
-        .col-sm-3
+        .col-sm-4
           .iconbox.wow.slideInLeft
             .iconbox-icon
               span.fa.fa-university
@@ -96,7 +94,7 @@ block content
               h3.iconbox-title= t('youthcouncil2016.iconboxTitle1') 
               .iconbox-desc= t('youthcouncil2016.iconboxDesc2')
               a.ajoinus(href='/youthcouncil2016')= t('youthcouncil2016.readMore')
-        .col-sm-3
+        .col-sm-4
           .iconbox.wow.slideInLeft
             .iconbox-icon
               span.icon-puzzle
@@ -104,7 +102,7 @@ block content
               h3.iconbox-title= t('youthcouncil2016.iconboxTitle2') 
               .iconbox-desc= t('youthcouncil2016.iconboxDesc3')
               a.ajoinus(href='/youthcouncil2016#projects')= t('youthcouncil2016.readMore')
-        .col-sm-3
+        .col-sm-4
           .iconbox.wow.slideInRight
             .iconbox-icon
               span.icon-badge
@@ -112,14 +110,6 @@ block content
               h3.iconbox-title= t('youthcouncil2016.iconboxTitle3') 
               .iconbox-desc= t('youthcouncil2016.iconboxDesc4')
               a.ajoinus(href='/youthcouncil2016#training')= t('youthcouncil2016.readMore')
-        .col-sm-3
-          .iconbox.wow.slideInRight
-            .iconbox-icon
-              span.icon.fa.fa-tachometer
-            .iconbox-text
-              h3.iconbox-title= t('youthcouncil2016.iconboxTitle4') 
-              .iconbox-desc= t('youthcouncil2016.iconboxDesc5')
-              a.ajoinus(href='/download_calendar')= t('youthcouncil2016.download')
 
       // .row
     // .container
@@ -139,7 +129,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/img/item-1.jpg",height="250", width="360",alt="img01")
+              img(src="/img/item-8.jpg",height="250", width="360",alt="img01")
               figcaption                
                 a(href='/youthcouncil2015#training')
                 h2= t('youthcouncil2015.figCaptionTitle11')
@@ -148,7 +138,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/img/item-2.jpg",height="250", width="360",alt="img01")
+              img(src="/img/item-9.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/youthcouncil2015#miniprojects')
                 h2= t('youthcouncil2015.figCaptionTitle21')
@@ -157,39 +147,12 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/img/item-3.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#artCompetition')
-                h2= t('youthcouncil2015.figCaptionTitle31')
-                  span= t('youthcouncil2015.figCaptionTitle32')
-                p= t('youthcouncil2015.figCaptionDescription3')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-4.jpg",height="250", width="360",alt="img01")
+              img(src="/img/item-7.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/youthcouncil2015#studyTrip')
                 h2= t('youthcouncil2015.figCaptionTitle41')
                   span= t('youthcouncil2015.figCaptionTitle42')
                 p= t('youthcouncil2015.figCaptionDescription4')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-5.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#newspaper')
-                h2= t('youthcouncil2015.figCaptionTitle51')
-                  span= t('youthcouncil2015.figCaptionTitle52')
-                p= t('youthcouncil2015.figCaptionDescription5')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-6.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015')
-                h2= t('youthcouncil2015.figCaptionTitle61')
-                  span= t('youthcouncil2015.figCaptionTitle62')
-                p= t('youthcouncil2015.figCaptionDescription6')
     // .contaier
   // Youth council 2015 end
 
@@ -231,7 +194,7 @@ block content
                 h2= t('youthcouncil2013.figCaptionTitle31')
                   span= t('youthcouncil2013.figCaptionTitle32')
                 p= t('youthcouncil2013.figCaptionDescription3')
-        .col-xs-12.col-sm-4.col-md-4
+        .col-xs-12.col-sm-4.col-md-4.col-sm-offset-2.col-md-offset-2
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/img/item-4.jpg",height="250", width="360",alt="img01")
@@ -249,81 +212,8 @@ block content
                 h2= t('youthcouncil2013.figCaptionTitle51')
                   span= t('youthcouncil2013.figCaptionTitle52')
                 p= t('youthcouncil2013.figCaptionDescription5')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-6.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2013')
-                h2= t('youthcouncil2013.figCaptionTitle61')
-                  span= t('youthcouncil2013.figCaptionTitle62')
-                p= t('youthcouncil2013.figCaptionDescription6')
     // .contaier
   // Youth council 2013 end
-
-  // Team start
-  section#teams.pfblock.pfblock-gray
-    .container
-      .row.teams
-        .row
-          .col-sm-6.col-sm-offset-3
-            .pfblock-header.wow.fadeInUp
-              h2.pfblock-title= t('team.pfblockTitle')
-              .pfblock-line
-              .pfblock-subtitle= t('team.pfblockSubtitle')
-        // .row
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-1.jpg",height="250", width="360",alt="img01")
-              figcaption                
-                a(href='/youthcouncil2015#erriadh')
-                h2= t('team.textCenter1')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/hammamSousse2015/5.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#hammamSousse')
-                h2= t('team.textCenter2')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-3.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#kalaaKebira')
-                h2= t('team.textCenter3')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-4.jpg",height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#ksibetMediouni')
-                h2= t('team.textCenter4')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/Monastir2015/1.jpg", height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#monastir')
-                h2= t('team.textCenter5')
-        .col-xs-12.col-sm-4.col-md-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-6.jpg", height="250", width="360",alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#msaken')
-                h2= t('team.textCenter6')
-        .col-xs-12.col-sm-4.col-md-4.col-sm-offset-4
-          .grid.wow.zoomIn
-            figure.effect-bubba
-              img(src="/img/item-6.jpg", alt="img01")
-              figcaption
-                a(href='/youthcouncil2015#sousse')
-                h2= t('team.textCenter7')
-      // End row
-  // team end
-
   // call to action starts
   section.calltoaction
     .container
