--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,16 +5,16 @@ html
     // CSS files
     link(rel='stylesheet', media ='screen', href='/css/style.css')
     link(rel='stylesheet', media ='screen', href='/css/animate.css')
-    link(rel='stylesheet', media ='screen', href='bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', media ='screen', href='/css/bootstrap.min.css')
     link(rel='stylesheet', media ='screen', href='/css/simple-line-icons.css')
     link(rel='stylesheet', media ='screen', href='/css/font-awesome.min.css')  
-    link(rel="stylesheet", href="css/blueimp-gallery.min.css")
-    link(rel="stylesheet", href="css/bootstrap-image-gallery.min.css")
+    link(rel="stylesheet", href="/css/blueimp-gallery.min.css")
+    link(rel="stylesheet", href="/css/bootstrap-image-gallery.min.css")
     
     // Javascript files   
     script(src='/js/modernizr.custom.js')  
     script(src='/js/jquery-1.11.1.min.js')
-    script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/js/bootstrap.min.js')
     script(src='/js/jquery.parallax-1.1.3.js')
     script(src='/js/imagesloaded.pkgd.js')
     script(src='/js/jquery.sticky.js')
@@ -51,4 +51,3 @@ html
     // end footer
 
     
-
