--- a/views/youthcouncil2016/studyTrip.jade
+++ b/views/youthcouncil2016/studyTrip.jade
@@ -79,7 +79,11 @@ block content
           .pfblock-header.wow.fadeInUp
             h2.pfblock-title= t('youthcouncil2015.studyTrip')
             .pfblock-line
-            .pfblock-subtitle= t('youthcouncil2015.figCaptionDescription4')
+            .pfblock-subtitle= t('youthcouncil2016.tripDescription1')
+            .pfblock-subtitle= t('youthcouncil2016.tripDescription2')
+            .pfblock-subtitle= t('youthcouncil2016.tripDescription3')
+            .pfblock-subtitle= t('youthcouncil2016.tripDescription4')
+            .pfblock-subtitle= t('youthcouncil2016.tripDescription5')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
         // The Bootstrap Image Gallery lightbox, should be a child element of the document body
